# electron-react-video-stream

./: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js  webpack.config.js
UxPlay/: CMakeLists.txt
UxPlay/renderers/: video_renderer.c  video_renderer.h
public/: index.html
src/renderer/: App.jsx  index.jsx
